# ManagerPlatform

./: .env_example  .gitignore  Dockerfile  README.md  SQL.md  docker-compose.yml  pyproject.toml
.github/workflows/: code-quality.yml
core/: settings.py  urls.py
core/mixins/models/: __init__.py  timestamp.py
core/mixins/views/: __init__.py  htmx.py
project/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  models.py  repositories.py  services.py  urls.py
project/forms/: __init__.py  create.py  edit.py
project/migrations/: 0001_initial.py
project/views/: __init__.py  base.py  create.py  dashboard.py  delete.py  home.py  project_create.py  update.py
static/css/: style.css
static/js/: csrf.js  htmx_handlers.js  script.js
task/: constants.py  exceptions.py  forms.py  models.py  repositories.py  services.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_task_options.py
task/views/: __init__.py  create.py  delete.py  reorder.py  toggle.py  update.py
templates/: _base.html
templates/account/: login.html  logout.html  signup.html
templates/project/: create.html  dashboard.html  delete.html  edit.html  edit_title.html  project.html  project_item.html
templates/task/: oob_clear_input.html  oob_remove_no_tasks.html  task_form.html  task_item.html  task_text_display.html  task_text_edit.html
tests/project/: test_create_view.py  test_dashboard_view.py  test_delete_view.py  test_forms.py  test_models.py  test_update_view.py
tests/task/: __init__.py  test_admin.py  test_apps.py  test_constants.py  test_exceptions.py  test_forms.py  test_integration.py  test_models.py  test_repositories.py  test_services.py  test_urls.py  test_views.py
